fixing an alignment problem

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -49,7 +49,6 @@ body {
 .main__container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   color: #fff;
   gap: 2rem;
   min-width: 1000px;
